--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7f4b193d",
+   "id": "720c18a5",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b78c478",
+   "id": "65bc8cf2",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69fbf348",
+   "id": "20c321c9",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c5340937",
+   "id": "79e30f93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "69397e63",
+   "id": "c748e93f",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1febcb2a",
+   "id": "7da71362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd92e918",
+   "id": "b16bef83",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b0ea084",
+   "id": "d0bb0147",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "183f24fb",
+   "id": "6db9fc91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3d200597",
+   "id": "bc068374",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bdc84b60",
+   "id": "adfeeb97",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4246a1e2",
+   "id": "a6d1503c",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9dd00b25",
+   "id": "de0858bb",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "15a84357",
+   "id": "f9f3cf71",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d80c32e1",
+   "id": "06dbe5de",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a6231098",
+   "id": "e8b23345",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "08d1c7db",
+   "id": "fa6286c7",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7eb37e9",
+   "id": "3a886aa5",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2774ddd4",
+   "id": "ba198b52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6b787a65",
+   "id": "fe299dca",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9183fbc4",
+   "id": "d7fd86e7",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9448e8ab",
+   "id": "c33e1fb8",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bdd81c8a",
+   "id": "6be2614f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "de89f1d2",
+   "id": "96602ed0",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b1509792",
+   "id": "059e8bf5",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "793033bf",
+   "id": "97121967",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "16013dd3",
+   "id": "5d9e69d7",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b49314e8",
+   "id": "4cb71291",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "dcda3856",
+   "id": "48dc5982",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9726e496",
+   "id": "10751b45",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fff3c652",
+   "id": "56065442",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9a554161",
+   "id": "35fe36f0",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9a3a533c",
+   "id": "901a4186",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fe449584",
+   "id": "31965f6e",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "32184824",
+   "id": "b4a5a669",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ba71612",
+   "id": "ff0ee14d",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7a0543c4",
+   "id": "38269815",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b0ef433",
+   "id": "038ccecf",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc53583",
+   "id": "4a90d88a",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "86f1c394",
+   "id": "732bba29",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff6266e6",
+   "id": "e96b47e9",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c0db4789",
+   "id": "a8c36f18",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3db0e04c",
+   "id": "1a60e2ea",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9b45147",
+   "id": "c0edaa96",
    "metadata": {},
    "source": [
     "# Accumulating the unknown (paradigm 3)\n",
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "64ecc112",
+   "id": "88fc2d5d",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "890daaa7",
+   "id": "06ef1073",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b49c6fee",
+   "id": "f6a2d764",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b024e27d",
+   "id": "7595b897",
    "metadata": {},
    "source": [
     "# Rainfall \n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ebec2f22",
+   "id": "8a6356fc",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "675b9825",
+   "id": "2ded7f01",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "571296f7",
+   "id": "9168566e",
    "metadata": {},
    "source": [
     "# Looping over dicts\n",
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "b7c7f4cb",
+   "id": "578d5bd0",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9d64b705",
+   "id": "a5c2d327",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "103cd097",
+   "id": "ba231612",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4c66cc0b",
+   "id": "f0920045",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "cfa2b869",
+   "id": "6e43b45e",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "b5d0db8a",
+   "id": "851efdad",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "516e9704",
+   "id": "673b1399",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e0ca1cad",
+   "id": "3a46ee77",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "903b14b3",
+   "id": "230d8e6d",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "f2fdba75",
+   "id": "1634edc7",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a18dbb84",
+   "id": "d536340b",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2deb73b6",
+   "id": "daccbf98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b07779a4",
+   "id": "a3a39299",
    "metadata": {},
    "source": [
     "# Exercise: Age statistics\n",
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "711d69c2",
+   "id": "747cfb30",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "1df909bf",
+   "id": "9a7f29b9",
    "metadata": {},
    "outputs": [
     {
@@ -1597,34 +1597,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "8aeaa7c2",
+   "execution_count": 64,
+   "id": "860fa1ab",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[52, 21, 19, 17]"
+       "27.25"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# another way: just turn the ages (values) into a list\n",
+    "# option 2: another way: just turn the ages (values) into a list\n",
     "\n",
-    "list(people.values())"
+    "sum(people.values()) / len(list(people.values()))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ae854f0",
+   "cell_type": "markdown",
+   "id": "71fdd3a9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# How do dictionaries work?\n",
+    "\n",
+    "Dictionaries have some weird (and some useful) properties:\n",
+    "\n",
+    "1. Keys are "
+   ]
   }
  ],
  "metadata": {
